Mail: Shows OAuth2 errors right after account is created
I just upgraded my fedora from 31 to 33 to try and resolve unstability issues with the flatpak version 3.38.1 (and it resolved it: evolution no longer crashes when connected to an ews account). But it seems now evolution can't connect to my gmail account. It asks for the connection just fine, authentication is validated ok but after that it complains it can't find the oauth2 secret (this was ok in my fedora 31 release). After killing all processes and restarting evolution, the connection was ok. So maybe this deservers an extra check?
Edited by Milan Crha