I#1240 - Mail: Shows OAuth2 errors right after account is created

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1240